<resources>
    <string name="app_name">Kenalikan</string>
    <string name="welcome">Selamat datang \n di Kenalikan</string>
    <string name="welcome_home">Selamat datang</string>
    <string name="prelogin">Sudah punya akun</string>
    <string name="register">Daftar akun</string>
    <string name="login">LOGIN</string>
    <string name="login_text1">Silahkan Masukkan \n no.telp yang terdaftar</string>
    <string name="message_login_page">Masukan Data untuk login</string>
    <string name="no_tel">Email/No Telepon</string>
    <string name="password">Password</string>
    <string name="title_signup_page">Masukkan data \n untuk mendaftar</string>
    <string name="name">Nama Lengkap</string>
    <string name="logout">Keluar</string>
    <string name="crop">Crop</string>
    <string name="camera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="tv_cuaca">cuaca hari ini</string>
    <string name="result">Hasil\n</string>
    <string name="empty_image_warning">Isi dulu</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="not_found_img">Masukkan Foto Dulu</string>
    <string name="nama_tempat">Nama Tempat</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="keluar">Keluar</string>
    <string name="beranda">Beranda</string>
    <string name="no_telp">+62 ************</string>
    <string name="nama">Nama</string>
    <string name="harga_pasar">Harga Pasar</string>
    <string name="perkiraan_harga_pasar">Perkiraan Harga Pasar</string>
    <string name="deskripsi_ikan">deskripsi ikan</string>
    <string name="name_of_fish">Name of fish</string>
    <string name="jenis_ikan">Jenis Ikan</string>
    <string name="hasil">Deteksi Ikan</string>
    <string name="rent_title"><![CDATA[Rekomendasi Tempat\nSewa Kapal & alat]]></string>
    <string name="cerah_berawan">Cerah Berawan</string>
    <string name="title_suhu">Suhu</string>
    <string name="isi_temperatur">23.12 C°</string>
    <string name="kota">Jakarta</string>
    <string name="kecepatan_angin">Kecepatan Angin</string>
    <string name="isi_kecepatan">00.00 m/s</string>
    <string name="matahari_terbit">Matahari Terbit</string>
    <string name="jam_terbit">05.30 WIB</string>
    <string name="matahari_terbenam">Matahari Terbenam</string>
    <string name="jam_terbenam">17.45 WIB</string>

    <!-- Sewa Kapal-->
    <string-array name="data_name">
        <item>Sewa Kapal Mancing dan Privat Tour Pulau Seribu Jakarta</item>
        <item>Pangkalan Service Bout Arsa</item>
        <item>Service Boat Arung Samudera</item>
        <item>KM QueenzA Sewa Kapal Mancing</item>
        <item>Pangkalan perahu mancing Kalibaru</item>
    </string-array>

    <string-array name="data_description">
        <item>
            Menawarkan sewa kapal mancing untuk berbagai jenis ikan di Kepulauan Seribu. Menyediakan paket wisata mancing lengkap dengan pemandu,
            peralatan pancing, dan akomodasi. Juga melayani private tour untuk kelompok kecil atau keluarga.
            \n\nJenis Kapal dan Harga:
            \n-Kapal Mancing Standar (4-6 orang):\n  Rp. 1.500.000/hari
            \n-Kapal Mancing VIP (7-10 orang): \n  Rp. 2.500.000/hari
            \n\nAlat Pancing dan Harga:
            \n-Set Joran Pancing: \n  Rp. 200.000/hari
            \n-Reel Pancing: \n  Rp. 100.000/hari
            \n-Senar Pancing: \n  Rp. 50.000/roll
            \n-Umpan Pancing: \n  Rp. 100.000/kg
        </item>
        <item>
            Menjual dan menyewakan berbagai jenis kapal, termasuk kapal mancing. Menyediakan jasa service dan perbaikan kapal,
            serta menjual alat-alat pancing dan aksesoris lainnya.
            \n\nJenis Kapal dan Harga:
            \n-Kapal Mancing Fiberglass (4-6 orang):\n  Rp. 1.000.000/hari
            \n-Kapal Mancing Kayu (2-4 orang):\n  Rp. 700.000/hari
            \n-Speedboat (8-12 orang):\n  Rp. 2.000.000/hari
            \n\nAlat Pancing dan Harga:
            \n-Set Joran Pancing Lengkap:\n  Rp. 350.000/hari
            \n-Reel Pancing Elektrik:\n  Rp. 250.000/hari
            \n-Fish Finder:\n  Rp. 150.000/hari
            \n-ooler Box:\n  Rp. 100.000/hari
        </item>
        <item>
            Menyediakan jasa service dan perbaikan kapal, termasuk kapal mancing. Menjual suku cadang dan aksesoris kapal,
            serta melayani bongkar pasang mesin kapal.
            \n\nLayanan:
            \n-Service mesin kapal
            \n-Perbaikan fiberglass dan kayu
            \n-Pemasangan aksesoris kapal
            \n-Bongkar pasang mesin kapal
            \n\nHarga:
            \n-Tergantung jenis layanan dan kerusakan kapal
        </item>
        <item>
            Menyewakan kapal mancing dengan berbagai ukuran dan fasilitas, menawarkan paket mancing ke berbagai spot mancing di Kepulauan Seribu,
            menyediakan peralatan pancing dan crew yang berpengalaman.
            \n\nJenis Kapal dan Harga:
            \n-Kapal Mancing Standar (6-8 orang):\n  Rp. 1.200.000/hari
            \n-Kapal Mancing VIP (10-12 orang):\n  Rp. 2.000.000/hari
            \n-Yacht Mewah (15-20 orang):\n  Rp. 5.000.000/hari
            \n\nAlat Pancing dan Harga:
            \n-Live Bait: Rp. 200.000/kg
            \n-GPS Marine: Rp. 300.000/hari
            \n-Drone Kamera: Rp. 1.000.000/hari
        </item>
        <item>
            Menyewakan perahu mancing dengan harga terjangkau, terletak di kawasan Kalibaru, Jakarta Utara, mudah diakses dan dekat dengan berbagai tempat wisata.
            \n\nJenis Kapal dan Harga:
            \n-Perahu Mancing Kecil (2-3 orang):\n  Rp. 500.000/hari
            \n-Perahu Mancing Sedang (4-5 orang):\n  Rp. 700.000/hari
            \n-Perahu Mancing Besar (6-8 orang):\n  Rp. 900.000/hari
        </item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/image_kapal1</item>
        <item>@drawable/image_kapal2</item>
        <item>@drawable/image_kapal3</item>
        <item>@drawable/image_kapal4</item>
        <item>@drawable/image_kapal5</item>
    </integer-array>
</resources>