<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.HomeFragment"
    android:background="@drawable/bg_gradient_page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!-- TODO: Update blank fragment layout -->
    <SearchView
        android:id="@+id/sv_search"
        android:layout_width="265dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_search_home"
        android:iconifiedByDefault="false"
        android:queryHint="Cari Kota"
        android:searchIcon="@drawable/svg_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/idProfile"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:tint="@color/black"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sv_search"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_person_24" />

    <ImageView
        android:id="@+id/ivLocation"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_svg_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_search"
        app:tint="@color/fade_blue" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/kota"
        android:textSize="32sp"
        android:textColor="@color/fade_blue"
        app:layout_constraintStart_toEndOf="@+id/ivLocation"
        app:layout_constraintTop_toBottomOf="@+id/sv_search" />

    <ImageView
        android:id="@+id/ivWeatherIcon"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/svg_sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCity" />

    <TextView
        android:id="@+id/tvCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/cerah_berawan"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivWeatherIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivContain1"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/bg_container_main"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tvCondition"
        tools:layout_editor_absoluteX="16dp"/>

    <ImageView
        android:id="@+id/ivTemp"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_svg_temperature"
        app:layout_constraintBottom_toBottomOf="@+id/ivContain1"
        app:layout_constraintStart_toStartOf="@+id/ivContain1"
        app:layout_constraintTop_toBottomOf="@+id/ivWeatherIcon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/title_suhu"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ivTemp"
        app:layout_constraintTop_toTopOf="@+id/ivContain1" />

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/isi_temperatur"
        android:textSize="24sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/ivTemp"
        app:layout_constraintTop_toTopOf="@+id/ivContain1" />

    <ImageView
        android:id="@+id/ivContain2"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/bg_container_main"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/ivContain1"
        tools:layout_editor_absoluteX="16dp"/>

    <ImageView
        android:id="@+id/ivWind"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/ic_svg_windspeed"
        app:layout_constraintBottom_toBottomOf="@+id/ivContain2"
        app:layout_constraintStart_toStartOf="@+id/ivContain2"
        app:layout_constraintTop_toTopOf="@+id/ivContain2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/kecepatan_angin"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/ivWind"
        app:layout_constraintTop_toTopOf="@+id/ivContain2" />

    <TextView
        android:id="@+id/tvWindspeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/isi_kecepatan"
        android:textSize="24sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/ivWind"
        app:layout_constraintTop_toTopOf="@+id/ivContain2" />

    <ImageView
        android:id="@+id/ivContain3"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/bg_container_main"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/ivContain2"
        tools:layout_editor_absoluteX="16dp"/>

    <ImageView
        android:id="@+id/ivSunrise"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_svg_sunrise"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivContain3"
        app:layout_constraintStart_toStartOf="@+id/ivContain3"
        app:layout_constraintTop_toTopOf="@+id/ivContain3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matahari_terbit"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/ivSunrise"
        app:layout_constraintTop_toTopOf="@+id/ivContain3" />

    <TextView
        android:id="@+id/tv_Sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jam_terbit"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/ivSunrise"
        app:layout_constraintTop_toTopOf="@+id/ivContain3" />

    <ImageView
        android:id="@+id/ivContain4"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/bg_container_main"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/ivContain3"
        tools:layout_editor_absoluteX="16dp"/>

    <ImageView
        android:id="@+id/ivSundown"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_svg_sundown"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivContain4"
        app:layout_constraintStart_toStartOf="@+id/ivContain4"
        app:layout_constraintTop_toTopOf="@+id/ivContain4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matahari_terbenam"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/ivSundown"
        app:layout_constraintTop_toTopOf="@+id/ivContain4"/>

    <TextView
        android:id="@+id/tv_Sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jam_terbenam"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/ivSundown"
        app:layout_constraintTop_toTopOf="@+id/ivContain4"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>